# PlatformGameGenerator

./: .gitignore  README.md  index.html  pg_gen-1.0.0-py3-none-any.whl  pyproject.toml  release.sh  room_schema.json
assets/: LICENSE.txt  spritesheet.xcf  temp_spritesheet.xcf
assets/rooms/: base.json  basin.json  basin2.json  blocker.json  cell.json  corridor.json  corridor2.json  corridor_down.json  corridor_up.json  down_ladder.json  dump.json  empty_room.json  enemy1.json  enemy2.json  fallback.json  gauntlet.json  lighthouse.json  reward_brush.json  spawn.json  spawn_door_down.json  spawn_door_y.json  spawn_down.json  spawn_up.json  stairs_down.json  stairs_up.json  test.json  test_room.json  tri_connection.json  up_ladder.json  vert_cell.json  vert_shaft.json  vert_shaft2.json
assets/rooms/altar/: base.json  top.json
assets/rooms/atrium/: base.json  down.json  down_door.json  down_ladder.json  fire.json  key_center.json  key_side.json  up_block.json
assets/rooms/corridor/: base.json  down.json  down_fire.json  down_gap.json  down_ladder.json  up_ladder.json  up_none.json
assets/rooms/tri/: base.json  down_locked.json  down_normal.json  fill.json  link_easy.json  link_jump.json  up_locked.json  up_normal.json
docs/: .gitignore  additions.tex  bibliography.bib  index.tex  index_main.tex  index_supplement.tex  main.tex  preamble.tex  stn690.bst  supplement.tex  sync.sh  update-schedule.sh
src/gymnasium_int/: PgEnv.py  __init__.py
src/pg_gen/: __init__.py  assets.py
src/pg_gen/actors/: DifficultyToken.py  Gem.py  (+5 more)
src/pg_gen_gym/: PgEnv.py  __init__.py
(+103 files in other folders)
