[project]
name = "pg-gen"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Branislav Trstenský", email = "bt7s7k7@hotmail.sk" }]
dependencies = ["pygame>=2.6.0", "gymnasium>=1.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start = "pg_gen:main"
start-gym = "gymnasium_int:main"
start-editor = "pg_gen:start_editor"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pg_gen"]
